<!-- generated in de.wwu.md2.framework.generator.android.lollipop.view.Values.generateStringsXml() -->
<resources>
	<string name="app_name">Hochladen </string>
	<string name="title_activity_login">Einloggen</string>
	<string name="title_activity_register"></string>
	<string name="title_activity_mainView"></string>
	
	<string name="_alias">Start WFE 1</string>
	
	<string name="Login___ContainerUserName_UserName_title">UserName</string>
	<string name="Login___ContainerUserName_UserName_label"></string>
	<string name="Login___ContainerUserName_UserName_tooltip">User Name oder Email</string>
	<string name="Login___ContainerUserName___TooltipUserName_title">__TooltipUserName</string>
	<string name="Login___ContainerUserName___TooltipUserName_text">User Name oder Email</string>
	<string name="Login___ContainerPasswort_Passwort_title">Passwort</string>
	<string name="Login___ContainerPasswort_Passwort_label"></string>
	<string name="Login___ContainerPasswort_Passwort_tooltip">Passwort </string>
	<string name="Login___ContainerPasswort___TooltipPasswort_title">__TooltipPasswort</string>
	<string name="Login___ContainerPasswort___TooltipPasswort_text">Passwort </string>
	<string name="Login_beinloggen_title">beinloggen</string>
	<string name="Login_beinloggen_text">Einloggen</string>
	<string name="Login_bregistierung_title">bregistierung</string>
	<string name="Login_bregistierung_text">Konto erstellen</string>
	<string name="Register___ContainerUserName_UserName_title">UserName</string>
	<string name="Register___ContainerUserName_UserName_label"></string>
	<string name="Register___ContainerUserName_UserName_tooltip">User Name </string>
	<string name="Register___ContainerUserName___TooltipUserName_title">__TooltipUserName</string>
	<string name="Register___ContainerUserName___TooltipUserName_text">User Name </string>
	<string name="Register___ContainerEmail_Email_title">Email</string>
	<string name="Register___ContainerEmail_Email_label"></string>
	<string name="Register___ContainerEmail_Email_tooltip">Email</string>
	<string name="Register___ContainerEmail___TooltipEmail_title">__TooltipEmail</string>
	<string name="Register___ContainerEmail___TooltipEmail_text">Email</string>
	<string name="Register___ContainerPasswort_Passwort_title">Passwort</string>
	<string name="Register___ContainerPasswort_Passwort_label"></string>
	<string name="Register___ContainerPasswort_Passwort_tooltip">Passwort </string>
	<string name="Register___ContainerPasswort___TooltipPasswort_title">__TooltipPasswort</string>
	<string name="Register___ContainerPasswort___TooltipPasswort_text">Passwort </string>
	<string name="Register_bregistierung_title">bregistierung</string>
	<string name="Register_bregistierung_text">Registierung</string>
	<string name="MainView_info_title">info</string>
	<string name="MainView_info_text">frioui@th-brandenburg.de </string>
</resources>
