<!--generated in de.wwu.md2.framework.generator.android.lollipop.view.Layout.generateLayout()--><ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent" android:paddingBottom="@dimen/activity_vertical_margin" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" tools:context="md2.testprojekt.LoginActivity"><de.uni_muenster.wi.md2library.view.widgets.implementation.Md2GridLayoutPane android:columnCount="1" android:id="@id/Login" android:layout_columnWeight="100" android:layout_gravity="fill_horizontal" android:layout_height="wrap_content" android:layout_marginBottom="15dp" android:layout_marginTop="5dp" android:layout_width="match_parent" android:rowCount="4"><de.uni_muenster.wi.md2library.view.widgets.implementation.Md2GridLayoutPane android:columnCount="2" android:id="@id/Login___ContainerUserName" android:layout_columnWeight="100" android:layout_gravity="fill_horizontal" android:layout_height="wrap_content" android:layout_marginBottom="15dp" android:layout_marginTop="5dp" android:layout_width="0dp" android:rowCount="1"><de.uni_muenster.wi.md2library.view.widgets.implementation.Md2TextInput android:enabled="true" android:hint="@string/Login___ContainerUserName_UserName_tooltip" android:id="@id/Login___ContainerUserName_UserName" android:inputType="text" android:layout_columnWeight="90" android:layout_gravity="fill_horizontal" android:layout_height="wrap_content" android:layout_width="0dp" android:text=""/></de.uni_muenster.wi.md2library.view.widgets.implementation.Md2GridLayoutPane><de.uni_muenster.wi.md2library.view.widgets.implementation.Md2GridLayoutPane android:columnCount="2" android:id="@id/Login___ContainerPasswort" android:layout_columnWeight="100" android:layout_gravity="fill_horizontal" android:layout_height="wrap_content" android:layout_marginBottom="15dp" android:layout_marginTop="5dp" android:layout_width="0dp" android:rowCount="1"><de.uni_muenster.wi.md2library.view.widgets.implementation.Md2TextInput android:enabled="true" android:hint="@string/Login___ContainerPasswort_Passwort_tooltip" android:id="@id/Login___ContainerPasswort_Passwort" android:inputType="text" android:layout_columnWeight="90" android:layout_gravity="fill_horizontal" android:layout_height="wrap_content" android:layout_width="0dp" android:text=""/></de.uni_muenster.wi.md2library.view.widgets.implementation.Md2GridLayoutPane><de.uni_muenster.wi.md2library.view.widgets.implementation.Md2Button android:enabled="true" android:id="@id/Login_beinloggen" android:layout_columnWeight="100" android:layout_gravity="fill_horizontal" android:layout_height="wrap_content" android:layout_width="0dp" android:text="@string/Login_beinloggen_text"/><de.uni_muenster.wi.md2library.view.widgets.implementation.Md2Button android:enabled="true" android:id="@id/Login_bregistierung" android:layout_columnWeight="100" android:layout_gravity="fill_horizontal" android:layout_height="wrap_content" android:layout_width="0dp" android:text="@string/Login_bregistierung_text"/></de.uni_muenster.wi.md2library.view.widgets.implementation.Md2GridLayoutPane></ScrollView>